src/test/deca/context/valid/class/41-declVarValid2.deca
/* Description:
    teste la regle (3.16) (3.17) de la vérification contextuelles
    Déclaration des meme variables dans une redifiniition d'une methode

    Historique:
      cree le 21/01/2020
*/

class A {
  int a;
  int b;
  void methode1(int a,int b){   //chaque methode a son propre EnvironmentExp
    int c;
    float d;
    A e;
    Object f;
    B g;
    C h;

    }
}
class B extends A{
  void methode1(int a, int b){ // une redifinition de la methode
    int c;
    float d;
    A e;
    Object f;
    B g;
    C h;
  }

}
class C extends B{

}
